<resources>
    <string name="app_name">Desafio_Mobits_Android</string>
    <string name="text_subtitle_main">Seja bem vindo ao mundo de Crônicas de Gelo e Fogo, selecione uma opção abaixo para continuar navegando.</string>
    <string name="text_title_main">Crônicas de Gelo e Fogo</string>
    <string name="text_content_desciption_main">Imagem de fundo relacionada a cronicas de gelo e fogo</string>
    <string name="text_button_houses">Casas</string>
    <string name="text_button_books">Livros</string>
    <string name="title_livros">Livros</string>
    <string name="button_see_all_characters">Todos os Personagens</string>
    <string name="title_personagens">Personagens</string>
    <string name="title_personagem">Personagem</string>
    <string name="title_label">Títulos:</string>
    <string name="see_pov_characters_label">Personagens POV</string>
    <string name="title_casas">Casas</string>
    <string name="title_livro">Livro</string>
    <string name="title_casa">Casa</string>
    <string name="button_senhor_da_casa">Senhor da Casa</string>
    <string name="button_herdeiro_da_casa">Herdeiro da Casa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="busca_google">Busca google</string>
</resources>